--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@
 
 [package]
 name = "s2fa"
-version = "0.0.1"
+version = "0.0.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
-actix-web = "4.4"
-steam-totp = "0.2"
+actix-web = "4.9.0"
+steam-totp = "0.2.2"
